Fix hydration errors and change image view on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1330,7 +1330,7 @@ footer .full h1 {
   }
 }
 .services {
-  margin-top: 12rem;
+  margin-top: 8rem;
 }
 .services #container {
   display: flex;
